Possibly not totally or completely broken Shadow inspection to handle the new Mixins change